# bugyo

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PLAN.md  README.md  SECURITY.md  VISION.md  design-qa.md  eslint.config.js  index.html  package.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  (+1 more)
docs/: acp-notes.md  macos-code-signing.md  native-harness-plan.md  worktree-notes.md
src/: App.css  App.tsx  Automations.test.tsx  Automations.tsx  BudgetSettings.test.tsx  BudgetSettings.tsx  CommandPalette.test.tsx  CommandPalette.tsx  DiffView.tsx  Fleet.test.tsx  Fleet.tsx  FleetGrid.test.tsx  FleetGrid.tsx  Inbox.test.tsx  Inbox.tsx  NewSessionForm.test.tsx  NewSessionForm.tsx  Plugins.test.tsx  Plugins.tsx  ProjectDefaults.test.tsx  ProjectDefaults.tsx  QueuePanel.test.tsx  QueuePanel.tsx  ReviewPanel.test.tsx  ReviewPanel.tsx  SearchPanel.test.tsx  SearchPanel.tsx  SessionPane.test.tsx  SessionPane.tsx  Settings.test.tsx  Settings.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  Timeline.test.tsx  Timeline.tsx  Titlebar.tsx  Triggers.test.tsx  Triggers.tsx  (+4 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  screenshot.rs  service.rs
src-tauri/src/acp/: client.rs  mod.rs  protocol.rs
src-tauri/src/config/: mod.rs
src-tauri/src/orchestrator/: mod.rs  schedule.rs  triggers.rs
src-tauri/src/state/: mod.rs
src-tauri/src/workspace/: mod.rs
(+32 files in other folders)
